[gd_scene load_steps=10 format=3 uid="uid://dqfssbcwcllo0"]

[ext_resource type="Texture2D" uid="uid://dedxks2ovv2rv" path="res://Assets/Tilemap/v1.1 dungeon crawler 16X16 pixel pack/full tilemap.png" id="1_amlac"]
[ext_resource type="PackedScene" uid="uid://ddegjihulku5i" path="res://Scene/Player/player.tscn" id="1_h3xs7"]
[ext_resource type="Script" path="res://Scene/MainScene/MainScene.gd" id="1_voqw1"]
[ext_resource type="Script" path="res://Scene/MainScene/CanvasLayerScript.gd" id="4_jawpd"]
[ext_resource type="AudioStream" uid="uid://cgcqfddc1u2uo" path="res://Assets/Music/Last Call.mp3" id="5_r21vw"]
[ext_resource type="PackedScene" uid="uid://ox0u1agjn1cj" path="res://Scene/Menu/OptionMenu.tscn" id="6_37hvs"]
[ext_resource type="AudioStream" uid="uid://gli7bl2exnhy" path="res://Assets/Music/Goblins_Dance_(Battle).wav" id="6_l1hoc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p1ut1"]
texture = ExtResource("1_amlac")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/probability = 20.0
3:1/0 = 0
3:1/0/probability = 20.0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/probability = 10.0
3:2/0 = 0
3:2/0/probability = 10.0
4:2/0 = 0
4:2/0/probability = 10.0
5:2/0 = 0
5:2/0/probability = 5.0
6:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/probability = 10.0
3:3/0 = 0
3:3/0/probability = 5.0
4:3/0 = 0
4:3/0/probability = 5.0
5:3/0 = 0
5:3/0/probability = 5.0
6:3/0 = 0
8:3/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
1:7/0 = 0
2:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ela8f"]
sources/0 = SubResource("TileSetAtlasSource_p1ut1")

[node name="MainScene" type="Node" groups=["MainScene"]]
process_mode = 1
script = ExtResource("1_voqw1")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ela8f")
format = 2
layer_0/tile_data = PackedInt32Array(-65535, 196608, 1, 1, 131072, 2, 65537, 327680, 3, 131073, 131072, 2, 131072, 262144, 2, 196607, 131072, 2, 131071, 131072, 1, 65534, 196608, 1, -2, 196608, 2, -1, 131072, 1, 131070, 131072, 2, 196606, 196608, 3, 65536, 131072, 3, 0, 196608, 1, -65536, 131072, 1, 65535, 196608, 2, 2, 262144, 2, 262142, 196608, 1, 262143, 196608, 1, 327678, 196608, 1, 327679, 196608, 2, 196608, 196608, 2, 196609, 131072, 3, 262145, 196608, 3, 262144, 131072, 3, 327680, 131072, 1, 327681, 131072, 1, 393215, 131072, 3, 393214, 131072, 2, 393213, 262144, 3, 327682, 196608, 1, 393218, 131072, 1, 393217, 262144, 2, 458753, 131072, 1, 458752, 262144, 3, 524287, 196608, 1, 458750, 131072, 3, 393216, 131072, 1, 458751, 131072, 1, 327677, 262144, 2, -131077, 131072, 1, -65541, 196608, 3, -5, 196608, 1, 65531, 262144, 2, 131067, 327680, 3, 196603, 131072, 2, 262139, 327680, 2, 327675, 131072, 3, 393211, 262144, 2, 458747, 131072, 2, 524283, 131072, 1, 589819, 131072, 1, -131076, 131072, 2, -65540, 196608, 2, -4, 327680, 2, 65532, 131072, 1, 131068, 131072, 2, 196604, 131072, 3, 262140, 196608, 2, 327676, 196608, 3, 393212, 262144, 2, 458748, 196608, 1, 524284, 131072, 3, 589820, 196608, 2, -131075, 262144, 3, -65539, 131072, 3, -3, 131072, 1, 65533, 327680, 2, 131069, 131072, 1, 196605, 131072, 3, 262141, 131072, 1, 458749, 196608, 1, 524285, 131072, 1, 589821, 131072, 1, -131074, 327680, 3, -65538, 131072, 1, 524286, 131072, 1, 589822, 327680, 3, -131073, 196608, 1, -65537, 131072, 3, 589823, 131072, 1, -196608, 327680, 2, -131072, 131072, 2, 524288, 327680, 2, -196607, 196608, 1, -131071, 131072, 2, 524289, 262144, 3, -196606, 131072, 1, -131070, 262144, 2, -65534, 131072, 1, 65538, 131072, 1, 131074, 131072, 2, 196610, 196608, 2, 262146, 131072, 2, 458754, 327680, 3, 524290, 131072, 2, -196605, 131072, 3, -131069, 131072, 2, -65533, 131072, 1, 3, 131072, 1, 65539, 196608, 3, 131075, 131072, 1, 196611, 196608, 3, 262147, 196608, 2, 327683, 131072, 1, 393219, 196608, 2, 458755, 196608, 2, 524291, 327680, 3, -196604, 131072, 2, -131068, 131072, 1, -65532, 131072, 1, 4, 196608, 1, 65540, 131072, 1, 131076, 131072, 1, 196612, 131072, 1, 262148, 196608, 1, 327684, 131072, 3, 393220, 131072, 2, 458756, 131072, 2, 524292, 131072, 2, -196603, 262144, 3, -131067, 131072, 3, -65531, 196608, 2, 5, 327680, 3, 65541, 131072, 1, 131077, 327680, 3, 196613, 262144, 2, 262149, 196608, 3, 327685, 196608, 1, 393221, 196608, 1, 458757, 196608, 1, 524293, 196608, 1, -655371, 262144, 2, -589835, 196608, 1, -524299, 131072, 1, -655370, 131072, 1, -589834, 131072, 2, -524298, 131072, 1, -589833, 196608, 1, -524297, 131072, 3, -458763, 262144, 2, -393227, 327680, 3, -327691, 196608, 1, -458762, 196608, 1, -393226, 196608, 1, -327690, 327680, 2, -393225, 196608, 2, -327689, 262144, 2, -262155, 196608, 1, -196619, 327680, 2, -131083, 262144, 3, -262154, 131072, 1, -196618, 131072, 1, -131082, 131072, 2, -196617, 262144, 3, -131081, 196608, 2, -65547, 327680, 2, -11, 196608, 1, 65525, 131072, 3, -65546, 131072, 1, -10, 196608, 1, 65526, 131072, 1, -9, 196608, 3, 65527, 131072, 2, 131061, 262144, 2, 196597, 196608, 2, 131062, 262144, 3, 196598, 131072, 1, 196599, 131072, 1, -655368, 131072, 2, -589832, 196608, 1, -524296, 131072, 1, -655367, 196608, 2, -589831, 131072, 3, -524295, 196608, 1, -589830, 131072, 1, -524294, 262144, 2, -458760, 131072, 3, -393224, 131072, 1, -327688, 262144, 3, -458759, 196608, 1, -393223, 327680, 2, -327687, 131072, 2, -393222, 196608, 1, -327686, 196608, 2, -262152, 196608, 1, -196616, 196608, 2, -131080, 327680, 2, -262151, 131072, 3, -196615, 196608, 1, -131079, 131072, 3, -196614, 131072, 1, -131078, 262144, 2, -65544, 262144, 2, -8, 131072, 2, 65528, 131072, 1, -65543, 196608, 3, -7, 196608, 2, 65529, 131072, 1, -6, 196608, 1, 65530, 131072, 1, 131064, 131072, 1, 196600, 131072, 2, 131065, 196608, 1, 196601, 131072, 1, 196602, 262144, 3, -655365, 131072, 1, -589829, 262144, 2, -524293, 196608, 1, -655364, 196608, 1, -589828, 196608, 2, -524292, 196608, 1, -589827, 196608, 1, -524291, 131072, 3, -458757, 131072, 1, -393221, 131072, 1, -327685, 131072, 2, -458756, 196608, 3, -393220, 131072, 1, -327684, 196608, 2, -393219, 131072, 1, -327683, 131072, 1, -262149, 131072, 1, -196613, 131072, 3, -262148, 196608, 3, -196612, 196608, 2, -196611, 131072, 3, -655362, 196608, 1, -589826, 131072, 1, -524290, 131072, 3, -655361, 131072, 2, -589825, 196608, 2, -524289, 327680, 3, -655360, 196608, 2, -589824, 262144, 2, -458754, 196608, 1, -393218, 196608, 3, -327682, 131072, 3, -458753, 262144, 2, -393217, 196608, 2, -327681, 262144, 3, -458752, 262144, 2, -393216, 131072, 3, -262146, 131072, 1, -196610, 131072, 1, -262145, 196608, 1, -196609, 327680, 2, -262144, 262144, 3, -720895, 196608, 1, -655359, 327680, 2, -589823, 196608, 1, -720894, 262144, 2, -655358, 131072, 3, -589822, 131072, 3, -655357, 196608, 1, -589821, 131072, 1, -524287, 196608, 1, -458751, 196608, 1, -393215, 131072, 2, -524286, 196608, 2, -458750, 131072, 1, -393214, 131072, 1, -458749, 327680, 2, -393213, 131072, 3, -327679, 131072, 1, -262143, 131072, 1, -327678, 327680, 3, -262142, 327680, 2, -262141, 131072, 3, -720892, 131072, 1, -655356, 196608, 2, -589820, 196608, 3, -720891, 131072, 1, -655355, 131072, 3, -589819, 262144, 3, -655354, 131072, 2, -589818, 131072, 2, -524284, 131072, 1, -458748, 196608, 1, -393212, 196608, 3, -524283, 196608, 3, -458747, 131072, 1, -393211, 131072, 2, -458746, 131072, 1, -393210, 262144, 3, -327676, 196608, 3, -262140, 131072, 1, -327675, 196608, 1, -262139, 131072, 1, -262138, 262144, 2, -196602, 196608, 1, -65530, 262144, 3, 6, 196608, 3, 131078, 262144, 3, -720889, 131072, 1, -655353, 131072, 3, -589817, 196608, 2, -720888, 196608, 1, -655352, 327680, 3, -589816, 131072, 1, -655351, 196608, 1, -589815, 131072, 1, -524281, 327680, 2, -458745, 262144, 3, -393209, 262144, 3, -524280, 196608, 1, -458744, 131072, 1, -393208, 196608, 3, -458743, 262144, 2, -393207, 131072, 3, -327673, 196608, 2, -262137, 131072, 1, -196601, 327680, 2, -327672, 131072, 1, -262136, 262144, 2, -196600, 131072, 3, -262135, 131072, 1, -196599, 196608, 2, -131065, 131072, 3, -65529, 131072, 1, 7, 131072, 1, -131064, 131072, 1, -65528, 131072, 2, 8, 196608, 1, -65527, 131072, 2, 9, 196608, 1, 65543, 196608, 2, 131079, 196608, 2, 65544, 131072, 3, 131080, 131072, 2, 131081, 131072, 2, -720886, 262144, 3, -655350, 131072, 1, -589814, 327680, 2, -720885, 327680, 2, -655349, 196608, 2, -589813, 196608, 2, -524278, 262144, 2, -458742, 131072, 1, -393206, 327680, 2, -524277, 327680, 2, -458741, 196608, 1, -393205, 196608, 1, -327670, 131072, 1, -262134, 262144, 2, -196598, 131072, 1, -327669, 131072, 1, -262133, 131072, 1, -196597, 196608, 1, -131062, 327680, 3, -65526, 327680, 2, 10, 131072, 1, -131061, 196608, 2, -65525, 327680, 2, 11, 327680, 3, 65546, 196608, 2, 131082, 196608, 1, 65547, 131072, 1, 131083, 262144, 2, -720912, 131072, 3, -655376, 196608, 1, -524304, 196608, 1, -458768, 327680, 3, -327696, 131072, 3, -262160, 131072, 2, -131088, 196608, 1, -65552, 131072, 3, 65520, 131072, 1, 131056, 131072, 3, 262128, 196608, 2, 327664, 131072, 3, 458736, 262144, 2, 524272, 131072, 1, 655344, 196608, 3, 720880, 131072, 2, -786447, 196608, 1, -720911, 131072, 1, -655375, 196608, 3, -786446, 196608, 2, -720910, 131072, 1, -655374, 131072, 2, -720909, 327680, 3, -655373, 131072, 1, -589839, 327680, 2, -524303, 196608, 2, -458767, 196608, 1, -589838, 262144, 2, -524302, 196608, 2, -458766, 131072, 1, -524301, 131072, 2, -458765, 196608, 1, -393231, 131072, 3, -327695, 131072, 1, -262159, 131072, 1, -393230, 327680, 2, -327694, 131072, 1, -262158, 327680, 3, -327693, 196608, 1, -262157, 196608, 1, -196623, 131072, 2, -131087, 262144, 2, -65551, 196608, 1, -196622, 131072, 1, -131086, 131072, 2, -65550, 131072, 1, -131085, 262144, 3, -65549, 196608, 1, -15, 196608, 1, 65521, 131072, 1, 131057, 131072, 1, -14, 131072, 2, 65522, 131072, 1, 131058, 131072, 3, 65523, 196608, 1, 131059, 196608, 1, 196593, 131072, 1, 262129, 131072, 2, 327665, 196608, 1, 196594, 262144, 2, 262130, 196608, 1, 327666, 131072, 1, 262131, 196608, 2, 327667, 327680, 2, 393201, 196608, 1, 458737, 196608, 1, 524273, 131072, 1, 393202, 196608, 1, 458738, 131072, 1, 524274, 131072, 2, 458739, 131072, 2, 524275, 196608, 1, 589809, 196608, 1, 655345, 131072, 2, 720881, 131072, 1, 589810, 262144, 2, 655346, 131072, 1, 720882, 196608, 1, 655347, 131072, 1, 720883, 131072, 3, -786444, 131072, 2, -720908, 196608, 2, -655372, 131072, 2, -786443, 131072, 3, -720907, 196608, 3, -720906, 262144, 2, -589836, 131072, 2, -524300, 196608, 3, -458764, 196608, 1, -393228, 131072, 1, -327692, 196608, 1, -262156, 131072, 2, -196620, 131072, 1, -131084, 327680, 2, -65548, 327680, 2, -12, 131072, 2, 65524, 327680, 2, 131060, 196608, 1, 196596, 196608, 2, 262132, 196608, 3, 327668, 131072, 1, 262133, 196608, 1, 327669, 131072, 2, 262134, 196608, 1, 327670, 262144, 2, 393204, 262144, 2, 458740, 131072, 1, 524276, 131072, 2, 393205, 262144, 2, 458741, 131072, 1, 524277, 196608, 2, 458742, 131072, 1, 524278, 327680, 3, 589812, 196608, 1, 655348, 196608, 1, 720884, 196608, 2, 589813, 327680, 3, 655349, 262144, 2, 720885, 131072, 3, 655350, 262144, 3, 720886, 196608, 1, -786441, 196608, 1, -720905, 196608, 2, -655369, 196608, 1, -786440, 196608, 2, -720904, 262144, 2, -720903, 196608, 2, -458761, 196608, 1, -262153, 196608, 1, -65545, 327680, 3, 131063, 196608, 1, 262135, 196608, 1, 327671, 131072, 1, 262136, 327680, 2, 327672, 131072, 3, 262137, 131072, 1, 327673, 327680, 3, 393207, 196608, 2, 458743, 327680, 2, 524279, 196608, 1, 393208, 196608, 1, 458744, 196608, 3, 524280, 196608, 2, 458745, 262144, 2, 524281, 131072, 1, 589815, 131072, 3, 655351, 131072, 2, 720887, 131072, 1, 589816, 262144, 3, 655352, 327680, 3, 720888, 131072, 1, 655353, 131072, 3, 720889, 196608, 2, -786438, 131072, 2, -720902, 196608, 2, -655366, 327680, 2, -786437, 262144, 2, -720901, 327680, 2, -720900, 131072, 2, -458758, 262144, 2, -262150, 131072, 3, -65542, 196608, 1, 131066, 327680, 2, 262138, 131072, 1, 327674, 196608, 2, 393210, 131072, 1, 458746, 262144, 3, 524282, 262144, 3, 589818, 131072, 1, 655354, 131072, 2, 720890, 196608, 1, 655355, 327680, 3, 720891, 327680, 3, 655356, 196608, 1, 720892, 131072, 3, -786435, 196608, 1, -720899, 262144, 2, -655363, 196608, 1, -786434, 196608, 1, -720898, 131072, 1, -720897, 327680, 3, -458755, 262144, 3, -262147, 131072, 2, 655357, 327680, 3, 720893, 196608, 3, 655358, 196608, 3, 720894, 262144, 3, 655359, 131072, 1, 720895, 196608, 3, -851968, 196608, 1, -786432, 196608, 2, -720896, 196608, 3, -851967, 196608, 2, -786431, 262144, 2, -786430, 196608, 1, -524288, 131072, 3, -327680, 131072, 1, 589824, 196608, 1, 655360, 196608, 1, 589825, 327680, 2, 655361, 131072, 1, 589826, 196608, 1, 655362, 131072, 1, -851965, 262144, 2, -786429, 196608, 2, -720893, 131072, 2, -851964, 196608, 1, -786428, 262144, 3, -786427, 262144, 2, -524285, 327680, 2, -327677, 196608, 1, 589827, 131072, 3, 655363, 131072, 2, 589828, 196608, 1, 655364, 196608, 1, 589829, 131072, 2, 655365, 131072, 1, -851962, 131072, 3, -786426, 131072, 2, -720890, 131072, 3, -851961, 196608, 1, -786425, 131072, 3, -786424, 131072, 1, -524282, 131072, 1, -327674, 196608, 2, -131066, 327680, 2, 65542, 131072, 3, 196614, 327680, 2, 262150, 131072, 1, 196615, 196608, 1, 262151, 196608, 1, 196616, 131072, 1, 262152, 196608, 1, 327686, 196608, 3, 393222, 131072, 2, 458758, 327680, 3, 327687, 131072, 1, 393223, 327680, 3, 458759, 131072, 2, 393224, 196608, 1, 458760, 131072, 1, 524294, 327680, 2, 589830, 196608, 2, 655366, 196608, 1, 524295, 131072, 1, 589831, 196608, 1, 655367, 196608, 1, 589832, 196608, 3, 655368, 196608, 3, -851959, 196608, 2, -786423, 196608, 1, -720887, 327680, 3, -851958, 131072, 3, -786422, 262144, 2, -786421, 196608, 3, -524279, 196608, 2, -327671, 131072, 1, -131063, 131072, 1, 65545, 262144, 2, 196617, 262144, 2, 262153, 262144, 2, 196618, 262144, 3, 262154, 196608, 1, 196619, 196608, 1, 262155, 131072, 2, 327689, 196608, 1, 393225, 131072, 3, 458761, 262144, 3, 327690, 131072, 1, 393226, 131072, 1, 458762, 131072, 3, 393227, 262144, 2, 458763, 196608, 1, 524297, 196608, 1, 589833, 262144, 3, 655369, 131072, 2, 524298, 262144, 3, 589834, 131072, 1, 655370, 196608, 2, 589835, 131072, 1, 655371, 196608, 1, -851956, 262144, 3, -786420, 131072, 3, -720884, 196608, 2, -851955, 196608, 2, -786419, 131072, 2, -720883, 262144, 2, -786418, 131072, 1, -720882, 327680, 2, -655348, 196608, 1, -589812, 131072, 3, -524276, 262144, 2, -655347, 196608, 3, -589811, 131072, 2, -524275, 196608, 1, -589810, 196608, 1, -524274, 131072, 2, -458740, 262144, 3, -393204, 196608, 3, -327668, 196608, 2, -458739, 196608, 2, -393203, 196608, 2, -327667, 196608, 1, -393202, 262144, 2, -327666, 131072, 3, -262132, 262144, 2, -196596, 262144, 2, -131060, 196608, 2, -262131, 196608, 1, -196595, 327680, 2, -131059, 327680, 3, -196594, 262144, 2, -131058, 131072, 1, -65524, 131072, 3, 12, 131072, 2, 65548, 131072, 2, -65523, 131072, 3, 13, 262144, 3, 65549, 196608, 3, 14, 196608, 3, 65550, 327680, 3, 131084, 327680, 3, 196620, 131072, 3, 262156, 131072, 2, 131085, 131072, 2, 196621, 131072, 1, 262157, 327680, 3, 196622, 131072, 1, 262158, 196608, 2, 327692, 196608, 1, 393228, 131072, 1, 458764, 131072, 3, 327693, 131072, 1, 393229, 131072, 1, 458765, 262144, 2, 393230, 131072, 3, 458766, 327680, 2, 524300, 196608, 1, 589836, 327680, 2, 655372, 196608, 1, 524301, 131072, 1, 589837, 262144, 2, 655373, 327680, 2, 589838, 196608, 1, 655374, 262144, 3, -851985, 262144, 3, -786449, 262144, 2, -720913, 131072, 2, -655377, 131072, 1, -589841, 196608, 1, -524305, 327680, 2, -458769, 262144, 2, -393233, 262144, 2, -327697, 131072, 2, -262161, 196608, 2, -196625, 196608, 1, -131089, 131072, 2, -65553, 327680, 3, -17, 196608, 1, 65519, 262144, 2, 131055, 196608, 1, 196591, 262144, 2, 262127, 131072, 3, 327663, 131072, 2, 393199, 131072, 1, 458735, 327680, 2, 524271, 196608, 1, 589807, 196608, 3, 655343, 131072, 1, 720879, 131072, 1, 786415, 131072, 1, 851951, 131072, 2, -851984, 131072, 1, -786448, 262144, 2, -589840, 131072, 2, -393232, 131072, 1, -196624, 196608, 2, -16, 131072, 1, 196592, 131072, 3, 393200, 327680, 3, 589808, 196608, 2, 786416, 196608, 1, 851952, 196608, 1, -851983, 196608, 3, 786417, 131072, 2, 851953, 196608, 1, -851982, 131072, 3, 786418, 131072, 1, 851954, 196608, 2, -851981, 131072, 1, -786445, 327680, 2, -589837, 131072, 1, -393229, 196608, 2, -196621, 131072, 1, -13, 327680, 3, 196595, 131072, 3, 393203, 262144, 2, 589811, 196608, 1, 786419, 131072, 1, 851955, 262144, 2, -851980, 327680, 3, 786420, 327680, 2, 851956, 196608, 3, -851979, 327680, 2, 786421, 196608, 3, 851957, 131072, 2, -851978, 196608, 2, -786442, 196608, 2, 393206, 131072, 1, 589814, 131072, 1, 786422, 262144, 2, 851958, 196608, 2, -851977, 131072, 3, 786423, 196608, 2, 851959, 196608, 2, -851976, 131072, 3, 786424, 131072, 1, 851960, 196608, 3, -851975, 327680, 2, -786439, 131072, 3, 393209, 196608, 1, 589817, 196608, 1, 786425, 196608, 1, 851961, 327680, 2, -851974, 196608, 2, 786426, 131072, 2, 851962, 131072, 1, -851973, 131072, 1, 786427, 262144, 3, 851963, 131072, 1, -851972, 131072, 1, -786436, 262144, 3, 786428, 196608, 1, 851964, 196608, 2, -851971, 131072, 1, 786429, 262144, 2, 851965, 196608, 1, -851970, 196608, 1, 786430, 196608, 1, 851966, 262144, 2, -851969, 196608, 3, -786433, 131072, 1, 786431, 131072, 1, 851967, 131072, 1, -917504, 196608, 2, 720896, 262144, 2, 786432, 262144, 3, -917503, 196608, 1, 720897, 196608, 3, 786433, 262144, 2, -917502, 196608, 2, -851966, 196608, 1, 720898, 131072, 1, 786434, 196608, 2, -917501, 262144, 3, 720899, 196608, 1, 786435, 196608, 1, -917500, 196608, 2, 720900, 262144, 2, 786436, 131072, 2, -917499, 131072, 1, -851963, 131072, 3, 720901, 131072, 2, 786437, 131072, 1, -917498, 196608, 1, 720902, 131072, 2, 786438, 196608, 1, -917497, 131072, 3, 720903, 131072, 1, 786439, 262144, 3, -917496, 327680, 3, -851960, 196608, 1, 327688, 131072, 1, 524296, 196608, 1, 720904, 196608, 2, 786440, 131072, 1, -917495, 327680, 3, 720905, 327680, 2, 786441, 196608, 1, -917494, 327680, 2, 720906, 196608, 1, 786442, 196608, 1, -917493, 131072, 3, -851957, 131072, 1, 327691, 196608, 1, 524299, 131072, 3, 720907, 262144, 2, 786443, 131072, 1, -917492, 196608, 1, 720908, 327680, 2, 786444, 196608, 1, -917491, 131072, 2, 720909, 196608, 1, 786445, 131072, 3, -917490, 131072, 2, -851954, 196608, 1, -655346, 131072, 3, -458738, 131072, 3, -262130, 131072, 3, -65522, 131072, 1, 131086, 196608, 1, 327694, 131072, 3, 524302, 327680, 2, 720910, 131072, 2, 786446, 131072, 1, -917489, 196608, 1, -851953, 196608, 3, -786417, 262144, 2, -720881, 196608, 1, -655345, 196608, 3, -589809, 131072, 1, -524273, 196608, 1, -458737, 196608, 1, -393201, 196608, 3, -327665, 327680, 2, -262129, 196608, 1, -196593, 131072, 1, -131057, 196608, 1, -65521, 131072, 2, 15, 262144, 3, 65551, 262144, 3, 131087, 327680, 2, 196623, 262144, 3, 262159, 131072, 1, 327695, 262144, 2, 393231, 327680, 2, 458767, 131072, 3, 524303, 196608, 2, 589839, 196608, 2, 655375, 131072, 2, 720911, 196608, 1, 786447, 327680, 3)

[node name="Player" parent="." instance=ExtResource("1_h3xs7")]
z_as_relative = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_jawpd")

[node name="OptionMenu" parent="CanvasLayer" instance=ExtResource("6_37hvs")]
process_mode = 2
anchors_preset = -1
anchor_left = -0.101
anchor_top = -0.1
anchor_right = 0.1
anchor_bottom = 0.1
offset_left = 153.5
offset_top = 146.0
offset_right = 1357.0
offset_bottom = 1346.0

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 0.197
anchor_top = 0.938
anchor_right = 0.788
anchor_bottom = 0.977
offset_left = -0.500031
offset_right = 11.9999
offset_bottom = 0.499878
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.542
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0219402
grow_horizontal = 2
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="BackgroundMusicChill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_r21vw")
autoplay = true

[node name="BackgroundMusicFight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_l1hoc")

[connection signal="paused" from="." to="CanvasLayer/OptionMenu" method="_on_main_scene_paused"]
[connection signal="has_take_demage" from="Player" to="." method="_on_player_has_take_demage"]
[connection signal="has_take_demage" from="Player" to="CanvasLayer" method="_on_player_has_take_demage"]
[connection signal="sound_has_change" from="CanvasLayer/OptionMenu" to="." method="_on_option_menu_sound_has_change"]
